--- a/sass/layout/_section_destination.scss
+++ b/sass/layout/_section_destination.scss
@@ -95,20 +95,13 @@
         }
 
         //the class for js
-        .active2{
+        .active2 {
             // transition: all 0.3ms ease-in-out;
             border-bottom: 5px $color_tereciare solid;
             padding-bottom: 20px;
 
         }
     }
-
-
-
-
-
-
-
 
 
 }
@@ -143,18 +136,234 @@
 
 
 
-
-
-
-
-
-
 // the breakpoint for the tablet
-@media screen and (min-width: map-get($breakpoint, tablet)) {}
+@media screen and (min-width: map-get($breakpoint, tablet)) {
+    .left {
+        p {
+            // background-color: red;
+            width: 272px;
+            height: 24px;
+            margin-left: 38.5px;
+            margin-top: 1px;
+            cursor: pointer;
+
+            span:nth-child(1) {
+                margin-right: 10px;
+
+            }
+
+        }
+
+
+
+        img {
+            width: 300px;
+            height: 300px;
+            margin-left: 239px;
+            margin-top: 33px;
+            cursor: auto;
+
+
+
+
+        }
+    }
+
+
+
+
+    .right {
+
+
+
+        ul {
+            display: flex;
+            flex-direction: row;
+            margin-top: 17px;
+            height: 34px;
+            width: 285.5px;
+            cursor: pointer;
+            transform: translate(90%);
+
+
+
+
+            @for $i from 2 through 4 {
+                li:nth-child(#{$i}) {
+                    margin-left: 17px;
+                }
+            }
+
+            li:hover {
+                border-bottom: $color_secodaire 5px solid;
+                padding-bottom: 20px;
+            }
+        }
+
+
+
+
+        &_firstP {
+            width: 573px;
+            height: 84px;
+            margin-left: 97px;
+            margin-top: -28px;
+            text-align: center;
+
+        }
+
+        hr {
+            height: 2px;
+            width: 573px;
+            transform: translate(19%);
+            background: #383B4B;
+        }
+
+        &_mini-footeur {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-top: -20px;
+            width: 444px;
+            transform: translate(46%);
+
+            p {
+                cursor: pointer;
+            }
+
+            p:nth-child(2) {
+                margin-top: 10px;
+            }
+
+        }
+
+        //the class for js
+        .active2 {
+            // transition: all 0.3ms ease-in-out;
+            border-bottom: 5px $color_tereciare solid;
+            padding-bottom: 20px;
+
+        }
+    }
+}
 
 
 
 
 
 // the breakpoint for the mobile
-@media screen and (min-width: map-get($breakpoint, mobile)) {}
+@media screen and (min-width: map-get($breakpoint, mobile)) {
+
+
+    .left {
+        p {
+            // background-color: red;
+            width: 221px;
+            height: 19px;
+            margin-left: 97.5px;
+            margin-top: -31px;
+            cursor: pointer;
+
+            span:nth-child(1) {
+                margin-right: 10px;
+
+            }
+
+        }
+
+
+
+        img {
+            width: 170px;
+            height: 170px;
+            margin-left: 138px;
+            margin-top: 33px;
+            cursor: auto;
+
+
+
+
+        }
+    }
+
+
+
+
+    .right {
+
+
+
+        ul {
+            display: flex;
+            flex-direction: row;
+            margin-top: -118px;
+            height: 34px;
+            width: 285.5px;
+            cursor: pointer;
+            transform: translate(44%);
+
+
+
+
+            @for $i from 2 through 4 {
+                li:nth-child(#{$i}) {
+                    margin-left: 17px;
+                }
+            }
+
+            li:hover {
+                border-bottom: $color_secodaire 5px solid;
+                padding-bottom: 20px;
+            }
+        }
+
+        h1 {
+            margin-top: -114px;
+            margin-left: 0px;
+        }
+
+
+        &_firstP {
+            width: 327px;
+            height: 142px;
+            margin-left: 77px;
+            margin-top: -28px;
+            text-align: center;
+
+        }
+
+        hr {
+            height: 2px;
+            width: 327px;
+            transform: translate(19%);
+            background: #383B4B;
+        }
+
+        &_mini-footeur {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            margin-top: -20px;
+            width: 444px;
+            transform: translate(38%);
+
+            p {
+                cursor: pointer;
+            }
+
+            p:nth-child(2) {
+                margin-top: 5px;
+            }
+
+        }
+
+        //the class for js
+        .active2 {
+            // transition: all 0.3ms ease-in-out;
+            border-bottom: 5px $color_tereciare solid;
+            padding-bottom: 20px;
+
+        }
+    }
+
+}
