--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @import "./layout/_header";
 @import "./layout/_section_Home";
 @import "./layout/_section_destination";
+@import "./layout/section_crew";
 
 // pages
 
