--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,13 +12,13 @@
 
 html {
   font-size: 62.5%;
-  width: 100%;
+  width: 100vw;
   margin: 0;
 }
 
 body {
-  width: 100%;
-  height: 100vh;
+  width: 100vmax;
+  height: 100vmin;
   box-sizing: border-box;
   background: url("../../assets/home/background-home-desktop.jpg");
   background-size: cover;
@@ -42,26 +42,23 @@ body::-webkit-scrollbar-thumb {
   border: 3px solid transparent;
   /* creates padding around scroll thumb */
 }
-
 @media (max-width: 768px) {
   body {
     background: url("../../assets/home/background-home-tablet.jpg");
+    width: 768px;
     background-size: cover;
     background-repeat: no-repeat;
-    width: 100vw;
-    height: 100vh;
-    box-sizing: border-box;
-    background-size: cover;
-    background-repeat: no-repeat;
-    overflow-x: clip;
+    height: 1024px;
+    overflow: hidden;
   }
 }
-
 @media (max-width: 375px) {
   body {
     background: url("../../assets/home/background-home-mobile.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    width: 100vw;
+    height: 100vh;
   }
 }
 
@@ -201,7 +198,7 @@ body::-webkit-scrollbar-thumb {
   mix-blend-mode: normal;
   opacity: 0.25;
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .titre .number {
     font-family: "Barlow Condensed";
     font-style: normal;
@@ -215,7 +212,7 @@ body::-webkit-scrollbar-thumb {
     opacity: 0.25;
   }
 }
-@media screen and (min-width: 375px) {
+@media screen and (max-width: 375px) {
   .titre .number {
     font-family: "Barlow Condensed";
     font-style: normal;
@@ -237,7 +234,7 @@ body::-webkit-scrollbar-thumb {
   letter-spacing: 4.725px;
   text-transform: uppercase;
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .titre .pick_typo {
     font-family: "Barlow Condensed";
     font-style: normal;
@@ -250,7 +247,7 @@ body::-webkit-scrollbar-thumb {
     color: #FFFFFF;
   }
 }
-@media screen and (min-width: 375px) {
+@media screen and (max-width: 375px) {
   .titre .pick_typo {
     font-family: "Barlow Condensed";
     font-style: normal;
@@ -294,7 +291,7 @@ body::-webkit-scrollbar-thumb {
     color: #FFFFFF;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 375px) {
   .right h1 {
     font-family: "Bellefair";
     font-style: normal;
@@ -348,6 +345,190 @@ body::-webkit-scrollbar-thumb {
   color: #FFFFFF;
 }
 
+@media screen and (min-width: 769px) {
+  .crew_section {
+    color: white;
+  }
+  .crew_section .left_crew .titre_crew_typo span:nth-child(1) {
+    font-family: "Barlow Condensed";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 2.8rem;
+    line-height: 34px;
+    /* identical to box height */
+    letter-spacing: 3.725px;
+    mix-blend-mode: normal;
+    opacity: 0.25;
+    color: #D0D6F9;
+    margin-right: 10px;
+  }
+  .crew_section .left_crew .titre_crew_typo span:nth-child(2) {
+    font-family: "Barlow Condensed";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2.8rem;
+    line-height: 34px;
+    /* identical to box height */
+    letter-spacing: 3.375px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+  }
+  .crew_section .left_crew .h2_crew_typo {
+    font-family: "Bellefair";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 3.2rem;
+    line-height: 37px;
+    /* identical to box height */
+    text-transform: uppercase;
+    color: #FFFFFF;
+    mix-blend-mode: normal;
+    opacity: 0.5;
+  }
+  .crew_section .h1_crew_typo {
+    font-family: "Bellefair";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 5.6rem;
+    line-height: 64px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+  }
+  .crew_section .paragraphe_crew_typo {
+    font-family: "Barlow";
+    font-style: normal;
+    font-weight: 400;
+    font-size: vertion_rem(18);
+    line-height: 16px;
+    word-wrap: break-word;
+    /* or 178% */
+    color: #D0D6F9;
+  }
+}
+@media screen and (max-width: 768px) {
+  .crew_section {
+    color: white;
+  }
+  .crew_section .left_crew .titre_crew_typo span:nth-child(1) {
+    font-family: "Barlow Condensed";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 2rem;
+    line-height: 24px;
+    /* identical to box height */
+    letter-spacing: 3.375px;
+    mix-blend-mode: normal;
+    opacity: 0.25;
+    color: #D0D6F9;
+    margin-right: 10px;
+  }
+  .crew_section .left_crew .titre_crew_typo span:nth-child(2) {
+    font-family: "Barlow Condensed";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2rem;
+    line-height: 24px;
+    /* identical to box height */
+    letter-spacing: 3.375px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+  }
+  .crew_section .left_crew .h2_crew_typo {
+    font-family: "Bellefair";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2.4rem;
+    line-height: 28px;
+    /* identical to box height */
+    text-transform: uppercase;
+    text-align: center;
+    color: #FFFFFF;
+    mix-blend-mode: normal;
+    opacity: 0.5;
+  }
+  .crew_section .h1_crew_typo {
+    font-family: "Bellefair";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 4rem;
+    line-height: 44px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #FFFFFF;
+  }
+  .crew_section .paragraphe_crew_typo {
+    font-family: "Barlow";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 28px;
+    text-align: center;
+    /* or 178% */
+    color: #D0D6F9;
+  }
+}
+@media screen and (max-width: 375px) {
+  .crew_section {
+    color: white;
+  }
+  .crew_section .left_crew .titre_crew_typo span:nth-child(1) {
+    font-family: "Barlow Condensed";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1.6rem;
+    line-height: 19px;
+    /* identical to box height */
+    letter-spacing: 3.375px;
+    mix-blend-mode: normal;
+    opacity: 0.25;
+    color: #D0D6F9;
+    margin-right: 10px;
+  }
+  .crew_section .left_crew .titre_crew_typo span:nth-child(2) {
+    font-family: "Barlow Condensed";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 19px;
+    /* identical to box height */
+    letter-spacing: 2.7px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+  }
+  .crew_section .left_crew .h2_crew_typo {
+    font-family: "Bellefair";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 18px;
+    /* identical to box height */
+    text-transform: uppercase;
+    text-align: center;
+    color: #FFFFFF;
+    mix-blend-mode: normal;
+    opacity: 0.5;
+  }
+  .crew_section .h1_crew_typo {
+    font-family: "Bellefair";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2.4rem;
+    line-height: 28px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #FFFFFF;
+  }
+  .crew_section .paragraphe_crew_typo {
+    font-family: "Barlow";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.5rem;
+    line-height: 25px;
+    text-align: center;
+    /* or 178% */
+    color: #D0D6F9;
+  }
+}
 .Home_btn {
   width: 274px;
   height: 274px;
@@ -433,7 +614,7 @@ body section {
     display: grid;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .destination_section {
     display: grid;
     grid-template-columns: 1fr;
@@ -447,7 +628,7 @@ body section {
     display: grid;
   }
 }
-@media screen and (min-width: 375px) {
+@media screen and (max-width: 375px) {
   .destination_section {
     display: grid;
     grid-template-columns: 1fr;
@@ -459,6 +640,45 @@ body section {
   .destination_section .right {
     grid-row: 2;
     display: grid;
+  }
+}
+@media screen and (min-width: 769px) {
+  .crew_section {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+  }
+  .crew_section .left_crew {
+    grid-column: 1;
+  }
+  .crew_section .right_crew {
+    grid-column: 2;
+  }
+}
+@media screen and (max-width: 768px) {
+  .crew_section {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+  }
+  .crew_section .left_crew {
+    grid-row: 1;
+  }
+  .crew_section .right_crew {
+    grid-row: 2;
+  }
+}
+@media screen and (max-width: 375px) {
+  .crew_section {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+  }
+  .crew_section .left_crew {
+    grid-row: 2;
+  }
+  .crew_section .right_crew {
+    grid-row: 1;
   }
 }
 @media screen and (min-width: 769px) {
@@ -784,7 +1004,7 @@ body section {
     padding-bottom: 20px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .left p {
     width: 272px;
     height: 24px;
@@ -857,7 +1077,7 @@ body section {
     padding-bottom: 20px;
   }
 }
-@media screen and (min-width: 375px) {
+@media screen and (max-width: 375px) {
   .left p {
     width: 221px;
     height: 19px;
@@ -932,6 +1152,256 @@ body section {
   .right .active2 {
     border-bottom: 5px #FFFFFF solid;
     padding-bottom: 20px;
+  }
+}
+@media screen and (min-width: 769px) {
+  .crew_section .left_crew .titre_crew {
+    width: 286px;
+    height: 34px;
+    margin-left: 100.5px;
+    margin-top: 20px;
+    color: red;
+  }
+  .crew_section .left_crew .h2_crew {
+    width: 414px;
+    height: 37px;
+    margin-left: 100.5px;
+    margin-top: 80px;
+  }
+  .crew_section .left_crew .h1_crew {
+    width: 788px;
+    height: 64px;
+    margin-left: 100.5px;
+    margin-top: 9px;
+  }
+  .crew_section .left_crew .paragraphe_crew {
+    width: 244px;
+    height: 58px;
+    margin-left: 100.5px;
+    margin-top: 10px;
+  }
+  .crew_section .left_crew .radio_btn {
+    width: 100px;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 150px;
+    margin-left: 100.5px;
+    color: #D0D6F9;
+  }
+  .crew_section .left_crew .radio_btn input[type]:not(:checked) {
+    mix-blend-mode: normal;
+    opacity: 0.6;
+  }
+  .crew_section .left_crew .radio_btn input[type=radio]:after {
+    content: "";
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    top: -2px;
+    left: -1px;
+    position: relative;
+    background-color: #a3aff3;
+    display: inline-block;
+    visibility: visible;
+    border: 0px solid #D0D6F9;
+  }
+  .crew_section .left_crew .radio_btn input[type=radio]:checked:after {
+    content: "";
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    top: -2px;
+    left: -1px;
+    position: relative;
+    background-color: #FFFFFF;
+    display: inline-block;
+    visibility: visible;
+    border: 0px solid #FFFFFF;
+  }
+  .crew_section .right_crew img {
+    height: 412px;
+    width: 412px;
+    margin-left: -54px;
+    margin-top: 105px;
+    border-radius: 0px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .crew_section {
+    color: white;
+  }
+  .crew_section .left_crew .titre_crew {
+    width: 204px;
+    height: 24px;
+    position: absolute;
+    left: 38.5px;
+    top: 136px;
+  }
+  .crew_section .left_crew .h2_crew {
+    position: absolute;
+    height: 28px;
+    left: 32.42%;
+    right: 32.42%;
+    top: calc(35% - 14px - 77px);
+  }
+  .crew_section .left_crew .h1_crew {
+    position: absolute;
+    height: 46px;
+    left: 0.11%;
+    right: 0.11%;
+    top: calc(35% - 23px - 32px);
+  }
+  .crew_section .left_crew .paragraphe_crew {
+    width: 458px;
+    position: absolute;
+    height: 84px;
+    left: 0%;
+    right: 0%;
+    top: calc(35% - 42px + 49px);
+    transform: translate(30%, 0%);
+  }
+  .crew_section .left_crew .radio_btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: absolute;
+    width: 88px;
+    height: 10px;
+    left: 340px;
+    top: 500px;
+  }
+  .crew_section .left_crew input[type]:not(:checked) {
+    mix-blend-mode: normal;
+    opacity: 0.6;
+  }
+  .crew_section .left_crew input[type=radio]:after {
+    content: "";
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    top: -2px;
+    left: -1px;
+    position: relative;
+    background-color: gray;
+    display: inline-block;
+    visibility: visible;
+    border: 0px solid #D0D6F9;
+  }
+  .crew_section .left_crew input[type=radio]:checked:after {
+    content: "";
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    top: -2px;
+    left: -1px;
+    position: relative;
+    background-color: #FFFFFF;
+    display: inline-block;
+    visibility: visible;
+    border: 0px solid #FFFFFF;
+  }
+  .crew_section .right_crew img {
+    position: absolute;
+    width: 400.37px;
+    height: 400px;
+    left: 155.85px;
+    top: 623px;
+  }
+}
+@media screen and (max-width: 375px) {
+  .crew_section {
+    color: white;
+  }
+  .crew_section .left_crew .titre_crew {
+    width: 166px;
+    height: 19px;
+    left: 105px;
+    top: 88px;
+    position: absolute;
+  }
+  .crew_section .left_crew .h2_crew {
+    position: absolute;
+    height: 18px;
+    width: 300px;
+    left: 9.3%;
+    right: 26.3%;
+    top: calc(62% - 9px - 18px);
+  }
+  .crew_section .left_crew .h1_crew {
+    position: absolute;
+    height: 28px;
+    left: 0%;
+    right: 0%;
+    top: calc(62% - 14px + 13px);
+  }
+  .crew_section .left_crew .paragraphe_crew {
+    position: absolute;
+    height: 125px;
+    width: 327px;
+    left: -17%;
+    right: 0%;
+    top: calc(75% - 62.5px + 35px);
+  }
+  .crew_section .left_crew .radio_btn {
+    width: 100px;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: -117px;
+    margin-left: -208.5px;
+    color: #D0D6F9;
+  }
+  .crew_section .left_crew .radio_btn input[type=radio]:after {
+    content: "";
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    top: -2px;
+    left: -1px;
+    position: relative;
+    background-color: #a3aff3;
+    display: inline-block;
+    visibility: visible;
+    border: 2px solid #D0D6F9;
+  }
+  .crew_section .left_crew .radio_btn input[type=radio]:checked:after {
+    content: "";
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    top: -2px;
+    left: -1px;
+    position: relative;
+    background-color: #FFFFFF;
+    display: inline-block;
+    visibility: visible;
+    border: 2px solid #FFFFFF;
+  }
+  .crew_section .right_crew {
+    position: absolute;
+    width: 327px;
+    height: 223px;
+    left: 24px;
+    top: 139px;
+  }
+  .crew_section .right_crew img {
+    position: absolute;
+    width: 153.92px;
+    height: 222px;
+    left: 75px;
+    top: -7px;
+  }
+  .crew_section .right_crew::after {
+    content: "";
+    position: absolute;
+    width: 327px;
+    height: 1px;
+    background-color: #D0D6F9;
+    left: 2px;
+    top: 213px;
   }
 }
 
