--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -12,19 +12,21 @@
 html {
     // 10px div by def of 16px
     font-size: 62.5%;
-     width: 100%;
+     width: 100vw;
      margin: 0;
+     
     
 }
 
 body {
-    width:100%;
-    height: 100vh;
+    width:100vmax;
+    height: 100vmin;
     box-sizing: border-box;
     background: url($the_desktop_background)  ;
     background-size:cover;
     background-repeat: no-repeat;
     overflow-x:hidden ;
+    
     
   
 
@@ -52,34 +54,47 @@ body {
         border: 3px solid transparent;
         /* creates padding around scroll thumb */
     }
+
+
+
+     @media (max-width:map-get($breakpoint,tablet)) {
+
+            background: url($the_tablet_background) ;
+            width:768px;
+            background-size:cover;
+            background-repeat: no-repeat;
+            height:1024px;
+            overflow: hidden;
+            
+
+      
+}
+
+
+
+
+
+
+
+
+
+
+     @media (max-width:map-get($breakpoint, mobile)) {
+        background: url($the_mobile_background) ;
+        background-size:cover;
+        background-repeat: no-repeat;
+
+      width:100vw;
+      height:100vh;
+        // overflow-y:clip;
+        
+    }
     
 }
 
 
-body {
-  @media (max-width:map-get($breakpoint, tablet)) {
-        
-      background: url($the_tablet_background) ;
-      background-size: cover;
-      background-repeat: no-repeat;
-      
-      width:100vw;
-      height:100vh;
-      box-sizing: border-box;
-      background-size:cover;
-      background-repeat: no-repeat;
-      overflow-x:clip;
-
-    }
-}
 
 
-body {
-    @media (max-width:map-get($breakpoint, mobile)) {
-        background: url($the_mobile_background) ;
-        background-size:cover;
-        background-repeat: no-repeat;
-        // overflow-y:clip;
-        
-    }
-}
+
+
+
